@@ -198,7 +198,6 @@ public class InnsynskravService extends BaseService<Innsynskrav, InnsynskravDTO>
         return journalpost.getId();
       }
     }
-
     // Try to get the parent from the ES index. This is needed when the parent is deleted before the
     // child, and we need the parent ID to delete the child from ES.
     try {
@@ -207,16 +206,22 @@ public class InnsynskravService extends BaseService<Innsynskrav, InnsynskravDTO>
           esClient.search(
               sr -> sr.index(elasticsearchIndex).query(q -> q.ids(ids -> ids.values(List.of(id)))),
               Void.class);
-      return esResponse.hits().hits().get(0).routing();
+      return esResponse.hits().hits().getFirst().routing();
     } catch (Exception e) {
       if (innsynskrav != null) {
         var journalpost = innsynskrav.getJournalpost();
         var journalpostId = journalpost != null ? journalpost.getId() : null;
-        log.error(
-            "Failed to get parent for Innsynskrav: {}, parent: {}",
-            innsynskrav.getId(),
-            journalpostId,
-            e);
+        if (journalpostId == null) {
+          log.warn(
+              "Failed to get parent for Innsynskrav: {}. Journalpost was not found.",
+              innsynskrav.getId());
+        } else {
+          log.error(
+              "Failed to get parent for Innsynskrav: {}, parent: {}",
+              innsynskrav.getId(),
+              journalpostId,
+              e);
+        }
       } else {
         log.error("Failed to get parent for Innsynskrav {}", id, e);
       }
